<resources>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="unit_lb">lb</string>
    <string name="unit_ft">in</string>

    <string name="bmi_underweight_value"><i>&lt; 18,5 </i></string>
    <string name="bmi_norm_value"><i>18,5–24,99 </i></string>
    <string name="bmi_overweight_value"><i>25,0–29,99 </i></string>
    <string name="bmi_obesity_value"><i>≥ 30,0 </i></string>

    <string name="app_name">BMI Calculator</string>

    <string name="intro_label_ask_mass"><![CDATA[Insert yours mass <i>[%1$s]</i>:]]></string>
    <string name="intro_label_ask_heigth"><![CDATA[Insert yours height <i>[%1$s]</i>:]]></string>

    <string name="mass">Mass</string>
    <string name="height">Height</string>

    <string name="unit_change">Change units</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>

    <string name="intro_menu_save">Save</string>
    <string name="intro_menu_clear">Clear</string>
    <string name="intro_menu_share">Share</string>
    <string name="intro_menu_about">About</string>

    <string name="intro_yours_bmi">Yours BMI:</string>
    <string name="intro_wrong_value">Insert correct value</string>
    <string name="intro_bmi_info">
        <b>Body Mass Index</b> – the coefficient is derived by dividing the body weight given in kilograms by the square of the height given in meters.\n\n
        According to the basic classification for adults, BMI indicates:
    </string>


    <string name="bmi_underweight_word">underweight</string>
    <string name="bmi_norm_word">normal value</string>
    <string name="bmi_overweight_word">overweight</string>
    <string name="bmi_obesity_word">obesity</string>

    <string name="about_label">About</string>
    <string name="about_author_name">Bartłomiej Wierciński</string>
    <string name="about_autor">AUTHOR</string>
    <string name="about_site">http://fachmann.ro.lt/</string>
    <string name="about_version">Version 1.1</string>
    <string name="about_production_year">2017</string>

    <string name="share_subject">My BMI</string>
    <string name="share_content">My BMI is %1$s. It\'s %2$s</string>
    <string name="share_error">No application for sharing text</string>

</resources>
